[package]
name = "fwatcher"
version = "0.4.2"
authors = ["FuGangqiang <fu_gangqiang@qq.com>"]
description = "Auto run command when some files changed."
repository = "https://github.com/FuGangqiang/fwatcher.rs"
homepage = "https://github.com/FuGangqiang/fwatcher.rs"
documentation = "https://docs.rs/fwatcher"
keywords = ["cli", "notify", "watcher"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"
readme = "README.md"

[[bin]]
name = "fwatcher"
doc = false

[dependencies]
getopts = "0.2"
glob = "0.2"
notify = "4.0"
